--- a/themes/hugo-webstack/layouts/index.html
+++ b/themes/hugo-webstack/layouts/index.html
@@ -15,8 +15,8 @@
 <meta property="og:description" content="">
 <meta property="og:image" content="">
 <meta property="og:site_name" content="">
-<link rel="shortcut icon" href="./images/favicon.png">
-<link rel="apple-touch-icon" href="./images/app-ico.png">
+<link rel="shortcut icon" href="./images/NG66.png">
+<link rel="apple-touch-icon" href="./images/NG66.png">
 <link rel='stylesheet' id='font-awesome-css'  href='./css/font-awesome.min.css?ver=6.5.1' type='text/css' media='all' />
 <link rel='stylesheet' id='bootstrap-css'  href='./css/bootstrap.css?ver=3.4.1' type='text/css' media='all' />
 <link rel='stylesheet' id='nav-css'  href='./css/nav.css?ver=2.0.0' type='text/css' media='all' />
@@ -30,11 +30,11 @@
                     <!-- logo -->
                     <div class="logo">
                         <a href="./" class="logo-expanded" >
-                            <img src="./images/logo.png" height="40" alt="" />
+                            <img src="./images/NG66.png" height="60" alt="" />
                             &nbsp&nbsp{{ .Site.Title }}
                         </a>
                         <a href="./" class="logo-collapsed">
-                            <img src="./images/logo.png" height="40" alt="">
+                            <img src="./images/NG66" height="60" alt="">
                         </a>
                     </div>
                     <div class="mobile-menu-toggle visible-xs">
